<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_dateFitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateFitted" />

    <TextView
        android:id="@+id/tv_dateRemoved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/tv_dateFitted"
        android:layout_marginStart="114dp"
        android:text="@string/dateRemoved" />

    <TextView
        android:id="@+id/tv_kms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_dateFitted"
        android:layout_marginEnd="61dp"
        android:text="@string/kms" />
</RelativeLayout>