<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/busNoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:labelFor="@+id/etBusNo"
        android:text="@string/bus_no"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/etBusNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/busNoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

    <TextView
        android:id="@+id/historyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/history_type"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/busNoLabel"
        app:layout_constraintTop_toBottomOf="@+id/busNoLabel" />

    <RadioButton
        android:id="@+id/unitRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/unit"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/historyType"
        app:layout_constraintTop_toBottomOf="@+id/historyType" />

    <RadioButton
        android:id="@+id/defectRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/defect"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/unitRadioButton"
        app:layout_constraintTop_toBottomOf="@+id/unitRadioButton" />

    <Button
        android:id="@+id/checkStatus"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/check_status"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defectRadioButton" />
</android.support.constraint.ConstraintLayout>